# rakuten

./: .gitignore  .travis.yml  LICENSE  README.md  cabal.project  rakuten.cabal  stack.yaml
.github/workflows/: ci.yaml
src/Rakuten/: Client.hs
src/Rakuten/Endpoints/: Ichiba.hs
src/Rakuten/Types/: Class.hs
