cabal-version:      2.4
name:               rakuten
version:            0.1.1.5
tested-with:        GHC ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.1
synopsis:           The Rakuten API in Haskell
description:
  See README at <https://github.com/matsubara0507/rakuten#readme>

category:           Web
homepage:           https://github.com/matsubara0507/rakuten#readme
bug-reports:        https://github.com/matsubara0507/rakuten/issues
author:             MATSUBARA Nobutada
maintainer:         MATSUBARA Nobutada
copyright:          2017-2020 MATSUBARA Nobutada
license:            MIT
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/matsubara0507/rakuten

flag pedantic
  description: Enable -Werror
  default:     False
  manual:      True

common common
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  if flag(pedantic)
    ghc-options: -Werror

  build-depends:
    , base                >=4.11 && <4.15
    , data-default-class  ^>=0.1
    , extensible          >=0.6  && <0.9
    , req                 >=2.1  && <3.2
    , text                ^>=1.2

  default-language: Haskell2010

library
  import:          common
  hs-source-dirs:  src
  build-depends:
    , constraints  >=0.11 && <0.13
    , lens         >=4.17 && <4.20

  -- cabal-fmt: expand src
  exposed-modules:
    Rakuten
    Rakuten.Client
    Rakuten.Endpoints
    Rakuten.Endpoints.Ichiba
    Rakuten.Types
    Rakuten.Types.Base
    Rakuten.Types.Class
    Rakuten.Types.Error
    Rakuten.Types.Ichiba

test-suite spec
  import:         common
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  build-depends:
    , hspec           ^>=2.7
    , rakuten
    , servant-server  >=0.16 && <0.18
    , warp            ^>=3.3

  -- cabal-fmt: expand test -Spec
  other-modules:
    Rakuten.Endpoints.IchibaSpec
    Rakuten.Test.Class
    Rakuten.Test.Client
    Rakuten.Test.MockServer
